# MOS_models

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Overview.md  README.md  level_one.ipynb  pixi.toml  ty.toml
.github/: copilot-instructions.md
docs/: 0_development_plan.md  1_architecture_overview.md  2_stamp_api_design.md  3_mna_stamps.md  4_a_matrix_relationship.md  README.md  a_matrix_relationship.md  architecture_overview.md  development_plan.md  minimal_charge_based_mosfet.md  mna_stamps.md  stamp_api_design.md
examples/: dc_linear  run_model.py  simple_dc.net
scripts/: mosfet_model.py  run_model.py
src/: CMakeLists.txt  circuit.cc  circuit.h  circuit_test.cc  dc_linear.cc  device.cc  device.h  devices_test.cc  main.cc  minispice.cc  minispice.h  parser.cc  parser.h  stamp.cc  stamp.h  stamp_test.cc  test_circuit.cc  test_devices.cc  test_stamp.cc
